--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html>
 
 <head>
-    <title>Alura books</title>
+    <title>Alura Plus</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Com o Combo+, voce pode aproveitar a Alura+ e o Alura Lingua por um preco unico.</h1>
-    <body>
-        
-        <h1>Com o Combo+, voce pode aproveitar a Alura+ e o Alura Lingua por um preco unico.</h1>
-        <img src="img/Combo.png" alt="O combo+ e a juncao do alura+ e o alura lingua">
-
-    
+    <section class="container principal">
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>.
+    <img src="Combo.png" alt="O combo+ é a junção do alura+ e o alura língua">
+<img src=/"combo.png" alt=""o combo=+ é a junção do Alura+ e o alura+ e o alura língua">
+</section>
 </body>
 
 </html>
